--- a/index.html
+++ b/index.html
@@ -1,72 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  <meta charset="utf-8">
-  <title>Geolocation Application</title>
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
+<!-- Please see the included README.md and LICENSE.md files for license terms and conditions. -->
 
-  <link rel="stylesheet"  href="css/jquery.mobile.structure.css" />
-  <link rel="stylesheet" href="css/jquery.mobile.theme.css" />
+<head>
+    <title>Geolocation</title>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
 
-    <style>
-       #map {
-        height: 400px;
-        width: 100%;
-       }
-    </style>
-  
-  <script>
-    var userAgent = navigator.userAgent + '';
-    if (userAgent.indexOf('iPhone') > -1) {
-      document.write('<script src="js/lib/cordova-iphone.js"></sc' + 'ript>');
-      var mobile_system = 'iphone';
-    } else if (userAgent.indexOf('Android') > -1) {
-      document.write('<script src="js/lib/cordova-android.js"></sc' + 'ript>');
-      var mobile_system = 'android';
-    } else {
-      var mobile_system = '';
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3.exp&key=AIzaSyAvCB0fJALK-4VaEiubgiVYuh-pJxNGvH0"></script>
+    <script src='cordova.js'></script>
+    <script src="js/main.js"></script>
+
+    <style type="text/css">
+    * {
+        -webkit-user-select: none;
+        -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+        -ms-touch-action: none;
     }
-  </script>
-  
-  <script src="js/lib/jquery.js"></script>
-  <!-- your scripts here -->
-  <script src="js/app/app.js"></script>
-  <script src="js/app/bootstrap.js"></script>
-  <script src="js/lib/jquery.mobile.js"></script>
+    </style>
+</head>
 
-  </head>
-  <body>
-    
-    <div data-role="page">
+<body style="font-family:Arial;font-size:18pt;border:0;margin:0;padding:0;">
+    <div id="map_canvas" style="width:100%; text-align:center;">
+        <h1>Determining Your Location</h1>
+    </div>
+</body>
 
-    	<div data-role="header">
-              <h1>My Google Maps Demo</h1>
-    	</div><!-- /header -->
-
-    	<div data-role="content">
-      <div id="map"></div>
-      <div id="geolocation">
-        <button onclick="onDeviceReady()">Click For Location</button>
-      </div>
-      <script>
-        function initMap() {
-          var uluru = {lat: -25.363, lng: 131.044};
-          var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 4,
-            center: uluru
-          });
-        }
-      </script>
-      <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCi2reR4AFlnI-p7TDqElEqDQvNhb35fTE&callback=initMap">
-      </script>
-    	</div><!-- /content -->
-
-    	<div data-role="footer">
-    		<h4>Always Counter on us for Location</h4>
-    	</div><!-- /footer -->
-
-    </div><!-- /page -->
-  </body>
 </html>
